--- a/WebApi/Properties/launchSettings.json
+++ b/WebApi/Properties/launchSettings.json
@@ -13,8 +13,8 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-       //Use "swagger/index.html" or "swagger" as launchUrl
-      "launchUrl": "swagger/index.html",
+       // Use "index.html" or "" as launchUrl
+      "launchUrl": "index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,8 +22,8 @@
     "WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-       //Use "swagger/index.html" or "swagger" as launchUrl
-      "launchUrl": "swagger/index.html",
+       // Use "index.html" or "" as launchUrl
+      "launchUrl": "index.html",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
