--- a/Legend/Legend.WebApi/Legend.WebApi.csproj
+++ b/Legend/Legend.WebApi/Legend.WebApi.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
